crates/tmark-writers/tests/snapshots/fixtures__admonition-collapsed@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscallout}[kind=note, title={Folded}, collapsed]
Hidden by default.
\end{tscallout}

\begin{tscallout}[kind=tip]
Shown by default.
\end{tscallout}

---requires---
{
  "packages": [],
  "fragments": [
    "ts-callouts"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
