crates/tmark-writers/tests/snapshots/fixtures__attributes-colon@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h2 id="sec:boot" class="draft">Boot</h2>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
