crates/tmark-writers/tests/snapshots/fixtures__attributes-colon@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
== Boot <sec:boot>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
