crates/tmark-writers/tests/snapshots/fixtures__attributes-heading@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
== Boot sequence <sec:boot>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
