crates/tmark-writers/tests/snapshots/fixtures__attributes-image@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{figure}[H]
\centering
\includegraphics[width=0.6\linewidth]{trace.png}
\caption[Trace of the boot]{The watchdog fires \textbf{twice}.}\label{fig:plot}
\end{figure}

---requires---
{
  "packages": [
    "float",
    "graphicx"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "trace.png",
      "node": 2,
      "attrs": [
        [
          "width",
          "60%"
        ]
      ]
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
